# OpenSSL-Client-Server-with-BIO

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  Main.cpp  Makefile  OpenSSL_BIO_Client.cpp  OpenSSL_BIO_Client.h
HKS3/: mqttHandlerHKS3.py
Server/: CMakeLists.txt  Main.cpp  Makefile  OpenSSL_BIO_Server.cpp  OpenSSL_BIO_Server.h  Openssl-with-bio-Server
